--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,13 @@ on:
       - main
     paths:
       - 'charts/**'
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Reason for manual run'
+        required: false
+        default: 'Manual validation and release'
+
 
 jobs:
   release-charts:
@@ -16,22 +23,28 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
+
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-      
+
       - name: Install Helm
         uses: azure/setup-helm@v3
-      
+
       - name: Add repositories
         run: |
           for dir in $(ls -d charts/*/); do
             helm dependency list $dir 2> /dev/null | tail +2 | head -n -1 | awk '{ print "helm repo add " $1 " " $3 }' | while read cmd; do $cmd; done
           done
+          helm repo update
+
+      - name: Validate dependencies
+        id: validate-deps
+        run: ./dependency-validation.sh
 
       - name: Create cr.yaml
+        if: success()
         run: |
           cat > cr.yaml <<EOF
           owner: buildwithgrove
@@ -41,9 +54,10 @@ jobs:
           EOF
 
       - name: Run chart-releaser
+        if: success()
         uses: helm/chart-releaser-action@v1.7.0
         with:
           charts_dir: charts
-          config: cr.yaml 
+          config: cr.yaml
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
