--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,12 +32,22 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v3
 
+      # Add repositories - skipping GUARD's OCI dependency which fails in the CI
       - name: Add repositories
         run: |
-          for dir in $(ls -d charts/*/); do
-            helm dependency list $dir 2> /dev/null | tail +2 | head -n -1 | awk '{ print "helm repo add " $1 " " $3 }' | while read cmd; do $cmd; done
+          for dir in charts/*/; do
+            helm dependency list "$dir" 2>/dev/null | tail -n +2 | head -n -1 | \
+            awk '$3 !~ /^oci:\/\// { print "helm repo add " $1 " " $3 }' | \
+            while read -r cmd; do
+              echo "Executing: $cmd" && eval "$cmd"
+            done
           done
           helm repo update
+
+      # Update GUARD OCI dependency independently
+      - name: Update GUARD OCI dependency
+        run: |
+          helm dependency update charts/guard
 
       - name: Validate dependencies
         id: validate-deps
