--- a/charts/guard/Chart.yaml
+++ b/charts/guard/Chart.yaml
@@ -1,8 +1,9 @@
 apiVersion: v2
-name: guard
-description: A Helm chart for development and production deployments of GUARD (Gateway Utilities for Authentication, Routing & Defense)
-version: 0.1.11
 appVersion: "1.0"
+description: A Helm chart for development and production deployments of GUARD (Gateway Utilities for Authentication, Routing & Defense)
+name: guard
+type: application
+version: 0.1.11
 dependencies:
   - name: gateway-helm
     version: v1.3.0
