--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -30,4 +30,7 @@ auth:
     peas:
       enabled: false
     pads:
-      enabled: false
+      enabled: true
+      mountPath: /app
+      fromSecret:
+        secretName: pads-config
