Add volume configuration from secret and conditional to create ConfigMap (#54)
* Add volume configuration from secret and conditional to create ConfigMap

* Bump version

* Addressed comments

--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -30,4 +30,7 @@ auth:
     peas:
       enabled: false
     pads:
-      enabled: false
+      enabled: true
+      mountPath: /app/data
+      fromSecret:
+        secretName: pads-config
