Remove configurations from values.yaml

--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -31,9 +31,9 @@ auth:
       enabled: false
     pads:
       enabled: true
-      envFrom:
-        - secretRef: 
-            name: pads-db-connection
-      mountPath: /app/data
-      fromSecret:
-        secretName: pads-config
+      # envFrom:
+      #   - secretRef: 
+      #       name: pads-db-connection
+      # mountPath: /app/data
+      # fromSecret:
+      #   secretName: pads-config
