--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -21,19 +21,23 @@ gateway:
 domain: ""
 services: []
 auth:
+  # -- API Key auth configuration (default) --
   apiKey:
-    enabled: false
-    headerKey: ""
-    apiKeys: []
-  groveLegacy:
     enabled: true
+    headerKey: "authorization"
+    apiKeys: 
+      - test_api_key
+
+  # -- Grove Legacy auth configuration --
+  # ######### VERY IMPORTANT #########
+  # If you are not authorizing Grove Portal requests,
+  # this is VERY unlikely to fit your exact use-case.
+  groveLegacy:
+    enabled: false
     peas:
       enabled: false
     pads:
-      enabled: true
+      enabled: false
       envFrom:
         - secretRef: 
             name: pads-db-connection
-      mountPath: /app/data
-      fromSecret:
-        secretName: pads-config
