--- a/charts/guard/templates/envoy-gateway.yaml
+++ b/charts/guard/templates/envoy-gateway.yaml
@@ -9,6 +9,9 @@ metadata:
     {{- include "guard-helm.labels" $ | nindent 4 }}
 spec:
   gatewayClassName: {{$gwname}}-envoy-gateway-class
+  # Specify a custom EnvoyProxy resource to customize Envoy Gateway behavior.
+  # See the following link for more details:
+  # https://gateway.envoyproxy.io/latest/tasks/operations/customize-envoyproxy/
   infrastructure:
     parametersRef:
       group: gateway.envoyproxy.io
