--- a/charts/guard/templates/custom-envoy-proxy.yaml
+++ b/charts/guard/templates/custom-envoy-proxy.yaml
@@ -12,7 +12,8 @@ spec:
     type: Kubernetes
     kubernetes:
       envoyService:
-        # Use a ClusterIP as type of GUARD service: ingres is out of scope for GUARD.
+        # Use a ClusterIP as type of GUARD service.
+        # It is assumed that some ingres service (e.g. Google's MCG) accepts external traffic and redirects it to GUARD.
         type: ClusterIP
-        # The name of the service to which all requests should be directed for Authentication/Authorization/Rate Limiting/etc.
+        # The name of the service assigned to GUARD to which all requests should be directed for Authentication/Authorization/Rate Limiting/etc.
         name: {{$gwname}}
