--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -18,21 +18,36 @@ global:
   middlewarePort: 3000
 gateway:
   port: 3070
-domain: ""
-services: []
+# ** IMPORTANT: update domain value: **
+# ** - domain must be specified in HTTPRoute resources for proper request routing. **
+# ** - domain must match the Host header value in HTTP requests received by GUARD/Envoy Gateway. **
+domain: "example.com"
+# **IMPORTANT: specify at least one service: otherwise no requests will be accepted by Envoy Gateway.
+services:
+  # Morse-specific services
+  - serviceId: F00C
+    aliases:
+      - eth
+      - eth-mainnet
+    # TODO_MVP(@adshmh): Required by Grove for migration to PATH. Remove once the migration is completed.
+    #trafficSplitting:
+    #  enabled: true
+    #  weights:
+    #    path: 70
+    #    middleware: 30
 auth:
   apiKey:
-    enabled: false
+    enabled: true
     headerKey: ""
     apiKeys: []
   groveLegacy:
-    enabled: true
+    enabled: false
     peas:
       enabled: false
     pads:
       enabled: true
       envFrom:
-        - secretRef: 
+        - secretRef:
             name: pads-db-connection
       mountPath: /app/data
       fromSecret:
