--- a/charts/path-stack/values.yaml
+++ b/charts/path-stack/values.yaml
@@ -17,16 +17,16 @@ global:
 ##########################################################################
 path:
   name: "path"
-  #-- nameOverride allows override of a standard name defined by the chart.
+  # -- nameOverride allows override of a standard name defined by the chart.
   nameOverride: ""
   image:
     repository: ghcr.io/buildwithgrove/path
     # TODO_MVP(@adshmh): change to "latest" once the PATH repo CI's docker image push job is updated to use the correct tag.
     tag: main
     pullPolicy: Always
-  #-- Number of pod replicas. Conflicts with horizontalPodAutoscaler.
+  # -- Number of pod replicas. Conflicts with horizontalPodAutoscaler.
   replicas: 1
-  #-- horizontalPodAutoscaler provide HPA capabilities to PATH deployment. Conflicts with replicas.
+  # -- horizontalPodAutoscaler provide HPA capabilities to PATH deployment. Conflicts with replicas.
   horizontalPodAutoscaler:
     enabled: false
     # minReplicas: 2
@@ -47,7 +47,7 @@ path:
     #         value: 60
     #         periodSeconds: 30
 
-  #-- resources define requests and limits for PATH deployment.
+  # -- resources define requests and limits for PATH deployment.
   resources: {}
     # limits:
     #   memory: 2G
@@ -55,7 +55,7 @@ path:
     # requests:
     #   cpu: 1.8
     #   memory: 800Mi
-  #-- ports supports the creation of services tied to the ports declared below.
+  # -- ports supports the creation of services tied to the ports declared below.
   ports: []
     # - name: http
     #   port: 3069
@@ -68,34 +68,34 @@ path:
     #   service:
     #     type: ClusterIP
   
-  #-- # Pod liveness probe. Set to high value to account for the potential long response time of the QoS service.
+  # -- # Pod liveness probe. Set to high value to account for the potential long response time of the QoS service.
   livenessProbe: {}
     # failureThreshold: 600 
     #   path: /healthz
     #   port: 3069
     #   scheme: HTTP
-  #-- # Pod readiness probe. Set to high value to account for the potential long response time of the QoS service.
+  # -- # Pod readiness probe. Set to high value to account for the potential long response time of the QoS service.
   readinessProbe: {}
     # failureThreshold: 600
     # httpGet:
     #   path: /healthz
     #   port: 3069
     #   scheme: HTTP
-  #-- # Pod startup probe.
+  # -- # Pod startup probe.
   startupProbe: {}
 
-  #-- fromConfigMap allows to pass PATH configuration through a configMap.
-  #-- Such configMap is created outside the scope of this chart.
+  # -- fromConfigMap allows to pass PATH configuration through a configMap.
+  # -- Such configMap is created outside the scope of this chart.
   fromConfigMap: {}
     # name: my-path-configuration
     # key: .config.yaml
-  #-- fromSecret allows to pass PATH configuration through a Kubernetes secret.
-  #-- Such secret is created outside the scope of this chart.
+  # -- fromSecret allows to pass PATH configuration through a Kubernetes secret.
+  # -- Such secret is created outside the scope of this chart.
   fromSecret: {}
     # name: my-path-configuration
     # key: .config.yaml
 
-  #-- persistence provides a mechanism to create PVCs
+  # -- persistence provides a mechanism to create PVCs.
   persistence: {}
     # volumeClaimTemplates:
     #   storageClassName: pd-standard
@@ -115,9 +115,9 @@ path:
   # imagePullSecrets: {}
   #-- End of deployment specific configurations --#
 
-  #-- additionalLabels to include in resource's metadata.
+  # -- additionalLabels to include in resource's metadata.
   additionalLabels: {}
-  #-- additionalAnnotations allow adding resource-wide annotations for extra functionality.
+  # -- additionalAnnotations allow adding resource-wide annotations for extra functionality.
   additionalAnnotations: {}
 
 ###########################################################################
@@ -128,8 +128,8 @@ guard:
   nameOverride: ""
   gateway:
     port: 3070
-  #-- services is used to provide an array of services that GUARD will handle traffic for.
-  #-- This field supports aliases and traffic splitting capabilities.
+  # -- services is used to provide an array of services that GUARD will handle traffic for.
+  # -- This field supports aliases and traffic splitting capabilities.
   services: []
     # - serviceId: F00C
     #   aliases:
@@ -144,38 +144,34 @@ guard:
     #       path: 5
     #       # Send 95% of F00C traffic to the Middleware service
     #       middleware: 95
-  #-- auth provides the authentication mechanism used to interact with PATH.
+  # -- auth provides the authentication mechanism used to interact with PATH.
   auth:
-    #-- apiKey configures the authentication to PATH.
-    #-- This block accpets a header string and an array of apiKeys to be used.
-    #-- apiKey is meant to be the default authentication mechanism for every
-    #-- brand new user of PATH.
+    # -- apiKey configures the authentication to PATH.
+    # -- This block accpets a header string and an array of apiKeys to be used.
+    # -- apiKey is meant to be the default authentication mechanism for every brand new user of PATH.
     apiKey:
       enabled: false
       headerKey: ""
       apiKeys: []
-    #-- groveLegacy configures authentication with Grove's legacy gateway.
-    #-- New users are not meant to use this authentication mechanism.
-    #-- This configuration is meant to exist for backwards compatibility only
-    #-- and will be deprecated.
+    # -- groveLegacy configures authentication with Grove's legacy gateway.
+    # -- New users are not meant to use this authentication mechanism.
+    # -- This configuration is meant to exist for backwards compatibility only and will be deprecated.
     groveLegacy:
       enabled: false
 
-  #-- serviceName declares the backend service to which GUARD routes will send traffic to.
+  # -- serviceName declares the backend service to which GUARD routes will send traffic to.
   serviceName: path-http
-  #-- servicePort sets the default port used by PATH service.
+  # -- servicePort sets the default port used by PATH service.
   servicePort: 3069
-  #-- When traffic splitting is enabled, GUARD requires an additional
-  #-- gateway service and port to which traffic will be routed to.
-  #-- This configuration provides the ability to perform traffic shifting
-  #-- from an existing gateway to PATH.
+  # -- When traffic splitting is enabled, GUARD requires an additional gateway service and port to which traffic will be routed to.
+  # -- This configuration provides the ability to perform traffic shifting from an existing gateway to PATH.
   # TODO_UPNEXT(@HebertCL): Change this configuration field names if traffic splitting is expected to persist in GUARD.
   middlewareServiceName: "middleware-http"
   middlewarePort: 3000
-  #-- domain sets a FQDN for which GUARD will take traffic from.
-  #-- This value is only part of GUARD configuration and it does not
-  #-- create any type of DNS recordset. Such configuration is out of
-  #-- this chart scope.
+  # -- domain sets a FQDN for which GUARD will take traffic from.
+  # -- This value is only part of GUARD configuration and it does not
+  # -- create any type of DNS recordset. Such configuration is out of
+  # -- this chart scope.
   domain: "example.org"
 
   #-- 
@@ -188,32 +184,31 @@ watch:
   nameOverride: ""
   enabled: false
 
-  #-- WATCH uses by default kube-prometheus-stack to launch a monitorign stack from scratch.
-  #-- Enable this option only if you don't have an existing monitoring option already.
+  # -- WATCH uses by default kube-prometheus-stack to launch a monitorign stack from scratch.
+  # -- Enable this option only if you don't have an existing monitoring option already.
   kube-prometheus-stack:
     enabled: false
 
-  #-- dashboards creates PATH, GUARD and WATCH dashboards which can be visualized
-  #-- in kube-prometheus-stack's Grafana. Enable this option to visualize the dashboards in the
-  #-- monitoring stack created above.
+  # -- dashboards creates PATH, GUARD and WATCH dashboards which can be visualized.
+  # -- in kube-prometheus-stack's Grafana. Enable this option to visualize the dashboards in the monitoring stack created above.
   dashboards:
     enabled: false
     label: grafana
 
-    #-- namespace required by kube-prometheus-stack
+    # -- namespace required by kube-prometheus-stack
     namespace: monitoring
   
-    # PATH Dashboard Configuration
+    # -- PATH Dashboard Configuration
     path:
       enabled: true
       folderName: "PATH"
       
-    # GUARD Dashboard Configuration
+    # -- GUARD Dashboard Configuration
     guard:
       enabled: true
       folderName: "GUARD"
     
-    # Custom Dashboards - can be provided through values
+    # -- Custom Dashboards - can be provided through values
     custom:
       enabled: false
       dashboards: {}
@@ -225,8 +220,8 @@ watch:
         #     "panels": []
         #   }
 
-  #-- serviceMonitors declares the monitoing services for PATH and GUARD.
-  #-- This configuration is used by kube-prometheus-stack.  
+  # -- serviceMonitors declares the monitoing services for PATH and GUARD.
+  # -- This configuration is used by kube-prometheus-stack.  
   serviceMonitors: 
     namespace: monitoring  # Default namespace for ServiceMonitors
     path:
@@ -252,6 +247,5 @@ watch:
 #########################################################################
 # -------------------- Miscelaneous configurations -------------------- #
 #########################################################################
-#-- extraObjects provides a mechanism insert additional resources
-#-- which may be needed but are not part of this chart by default.
+# -- extraObjects provides a mechanism insert additional resources which may be needed but are not part of this chart by default.
 extraObjects: []
