--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,28 +32,7 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v4.3.0
 
-      - name: Add repositories
-        run: |
-          for dir in $(ls -d charts/*/); do
-            helm dependency list $dir 2> /dev/null | tail +2 | head -n -1 | awk '{ if ($3 !~ /^file:/) print "helm repo add " $1 " " $3 }' | while read cmd; do $cmd; done
-          done
-          helm repo update
-
-      - name: Create chart-releaser config
-        if: success()
-        run: |
-          cat > cr.yaml <<EOF
-          owner: buildwithgrove
-          git-repo: https://github.com/buildwithgrove/helm-charts
-          git-upload-url: https://buildwithgrove.github.io/helm-charts
-          skip-existing: true
-          EOF
-
-      - name: Run chart-releaser
-        if: success()
-        uses: helm/chart-releaser-action@v1.7.0
+      - name: Package and publish Helm charts
+        uses: stefanprodan/helm-gh-pages@master
         with:
-          charts_dir: charts
-          config: cr.yaml
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          token: ${{ secrets.GITHUB_TOKEN }}
