--- a/charts/path/Chart.yaml
+++ b/charts/path/Chart.yaml
@@ -3,5 +3,11 @@ appVersion: 0.0.16
 description: A Helm chart for PATH (PATH API & Toolkit Harness)
 name: path
 type: application
-version: 0.1.13
-
+version: 0.1.16
+dependencies:
+  - name: guard
+    version: "0.1.15"
+    repository: "https://buildwithgrove.github.io/helm-charts"
+  - name: watch
+    version: "0.1.11"
+    repository: "https://buildwithgrove.github.io/helm-charts"
