feat: add reference grant and namespace specifier

--- a/charts/guard/templates/auth-api-key/api-keys-secret.yaml
+++ b/charts/guard/templates/auth-api-key/api-keys-secret.yaml
@@ -8,6 +8,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: api-keys-secret
+  namespace: {{ $.Values.global.namespace }}
 stringData:
   # Populate the secret with the API keys from the `apiKeys` field in the
   # `auth` section of the `values.yaml` file.
