--- a/charts/guard/templates/custom-envoy-proxy.yaml
+++ b/charts/guard/templates/custom-envoy-proxy.yaml
@@ -7,6 +7,7 @@ apiVersion: gateway.envoyproxy.io/v1alpha1
 kind: EnvoyProxy
 metadata:
   name: {{$gwname}}-custom-proxy-config
+  namespace: {{ $.Values.global.namespace }}
 spec:
   provider:
     type: Kubernetes
