--- a/charts/guard/templates/auth-api-key/security-policy.yaml
+++ b/charts/guard/templates/auth-api-key/security-policy.yaml
@@ -18,7 +18,8 @@
 apiVersion: gateway.envoyproxy.io/v1alpha1
 kind: SecurityPolicy
 metadata:
-  name: {{ $service.serviceId | lower }}-subdomain-auth-policy
+  name: {{ $service.serviceId | lower }}-subdomain-auth-policy  
+  namespace: {{ $.Values.global.namespace }}
 spec:
   targetRefs:
     - group: gateway.networking.k8s.io
