--- a/charts/guard/templates/auth-grove/peas.yaml
+++ b/charts/guard/templates/auth-grove/peas.yaml
@@ -25,6 +25,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{$name}}-peas
+  namespace: {{ $.Values.global.namespace }}
 spec:
   replicas: {{ $peasConfig.replicas }}
   selector:
@@ -53,6 +54,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{$name}}-peas
+  namespace: {{ $.Values.global.namespace }}
 spec:
   selector:
     app: {{$name}}-peas
