--- a/charts/guard/templates/routing/httproute-notfound.yaml
+++ b/charts/guard/templates/routing/httproute-notfound.yaml
@@ -12,6 +12,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: resource-not-found-route
+  namespace: {{ $.Values.global.namespace }}
 spec:
   parentRefs:
   - kind: Gateway
