--- a/charts/guard/templates/envoy-gateway.yaml
+++ b/charts/guard/templates/envoy-gateway.yaml
@@ -10,14 +10,16 @@ metadata:
     {{- include "guard-helm.labels" $ | nindent 4 }}
 spec:
   gatewayClassName: {{$gwname}}-envoy-gateway-class
+  # TODO_MVP(@adshmh): uncomment once ArgoCD version supports the `infrastructure` field in the spec.
+  #
   # Specify a custom EnvoyProxy resource to customize Envoy Gateway behavior.
   # See the following link for more details:
   # https://gateway.envoyproxy.io/latest/tasks/operations/customize-envoyproxy/
-  infrastructure:
-    parametersRef:
-      group: gateway.envoyproxy.io
-      kind: EnvoyProxy
-      name: {{$gwname}}-custom-proxy-config
+  #infrastructure:
+  #  parametersRef:
+  #    group: gateway.envoyproxy.io
+  #    kind: EnvoyProxy
+  #    name: {{$gwname}}-custom-proxy-config
   listeners:
     - name: http
       protocol: HTTP
